Fix width on mobiles

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,6 @@
   text-align: center;
   background-color: #0f0024;
   min-height: 100vh;
-  width: 700px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
